# SDCC

./: .buildinfo  .buildinfo.bak  LICENSE  genindex.html  index.html  installation.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  readme.md  sdcc.html  sdcc_examples.html  sdcc_examples.ipynb  search.html  searchindex.js  test.html  test_notebook.html
.virtual_documents/: Untitled.html  sdcc_examples.html
_sources/: index.rst.txt  installation.rst  modules.rst  sdcc.rst  sdcc_examples.ipynb
docs/: conf.py  index.rst  installation.rst  modules.rst  sdcc.rst  sdcc_examples.ipynb
examples/: SDCC.ipynb  example_parallelized_script.py  sdcc_examples.ipynb  test.gel
particles/: TM00_PRO_1.00_OBL_1.00_easy.gel  TM00_PRO_1.00_OBL_1.00_hard.gel  TM00_PRO_1.00_OBL_1.20_easy.gel  TM00_PRO_1.00_OBL_1.20_hard.gel  TM00_PRO_1.00_OBL_1.44_easy.gel  TM00_PRO_1.00_OBL_1.44_hard.gel  TM00_PRO_1.00_OBL_1.73_easy.gel  TM00_PRO_1.00_OBL_1.73_hard.gel  TM00_PRO_1.00_OBL_2.08_easy.gel  TM00_PRO_1.00_OBL_2.08_hard.gel  TM00_PRO_1.00_OBL_2.50_easy.gel  TM00_PRO_1.00_OBL_2.50_hard.gel  TM00_PRO_1.00_OBL_3.00_easy.gel  TM00_PRO_1.00_OBL_3.00_hard.gel  TM00_PRO_1.20_OBL_1.00_easy.gel  TM00_PRO_1.20_OBL_1.00_hard.gel  TM00_PRO_1.44_OBL_1.00_easy.gel  TM00_PRO_1.44_OBL_1.00_hard.gel  TM00_PRO_1.73_OBL_1.00_easy.gel  TM00_PRO_1.73_OBL_1.00_hard.gel  TM00_PRO_2.08_OBL_1.00_easy.gel  TM00_PRO_2.08_OBL_1.00_hard.gel  TM00_PRO_2.50_OBL_1.00_easy.gel  TM00_PRO_2.50_OBL_1.00_hard.gel  TM00_PRO_3.00_OBL_1.00_easy.gel  TM00_PRO_3.00_OBL_1.00_hard.gel  TM05_PRO_1.00_OBL_1.00_easy.gel  (+311 more)
(+388 files in other folders)
